--- a/packages/swagger-ui-plugins/package.json
+++ b/packages/swagger-ui-plugins/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clubmed/trident-ui": "1.0.0-beta.18",
     "@clubmed/ui": "workspace:*",
+    "@stefanprobst/rehype-extract-toc": "2.2.0",
     "@types/swagger-ui-react": "4.18.3",
     "brace": "^0.11.1",
     "history": "^5.3.0",
@@ -23,6 +24,7 @@
     "react-router": "6.24.0",
     "react-router-dom": "6.24.0",
     "rehype-highlight": "7.0.0",
+    "rehype-parse": "9.0.0",
     "rehype-stringify": "10.0.0",
     "remark": "15.0.1",
     "remark-directive": "3.0.0",
